--- a/HotFix/HotFix.csproj
+++ b/HotFix/HotFix.csproj
@@ -112,6 +112,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Help\CScoket\CClientMessage.cs" />
+    <Compile Include="Help\CScoket\CSocketUtils.cs" />
+    <Compile Include="Help\Dumper.cs" />
     <Compile Include="Help\Extension.cs" />
     <Compile Include="Help\VectorExtension.cs" />
     <Compile Include="ILRMainCall.cs" />
@@ -137,6 +140,7 @@
     <Compile Include="Module\Lang\LangMgr.cs" />
     <Compile Include="Module\Login\LoginArgsData.cs" />
     <Compile Include="Module\Login\LoginMgr.cs" />
+    <Compile Include="Module\Login\LoginMgrMsg.cs" />
     <Compile Include="Module\Login\ServerItemData.cs" />
     <Compile Include="Module\Login\ServerListMgr.cs" />
     <Compile Include="Module\Login\ServUrlMsgData.cs" />
@@ -171,9 +175,146 @@
     <Compile Include="Module\UI\UIPanel\View\MainUIView.cs" />
     <Compile Include="Module\UI\UIPanel\View\SelServerUIView.cs" />
     <Compile Include="Module\UI\UIPanel\View\SettingUIView.cs" />
+    <Compile Include="Net\ClientToGameClientAction.cs" />
+    <Compile Include="Net\ClientToGameClientMessage.cs" />
+    <Compile Include="Net\ClientToGameClientProtocol.cs" />
+    <Compile Include="Net\Common\PbCom.cs" />
+    <Compile Include="Net\Common\PbError.cs" />
     <Compile Include="Net\HttpMsg.cs" />
+    <Compile Include="Net\MsgWaiting.cs" />
     <Compile Include="Net\NetMgr.cs" />
+    <Compile Include="Net\Proto\PbActivity.cs" />
+    <Compile Include="Net\Proto\PbBag.cs" />
+    <Compile Include="Net\Proto\PbBonus.cs" />
+    <Compile Include="Net\Proto\PbEquipUp.cs" />
+    <Compile Include="Net\Proto\PbHero.cs" />
+    <Compile Include="Net\Proto\PbLogin.cs" />
+    <Compile Include="Net\Proto\PbMail.cs" />
+    <Compile Include="Net\Proto\PbPay.cs" />
+    <Compile Include="Net\Proto\PbPlayer.cs" />
+    <Compile Include="Net\Proto\PbRank.cs" />
+    <Compile Include="Net\Proto\PbStore.cs" />
+    <Compile Include="Net\Proto\PbSystem.cs" />
+    <Compile Include="Net\Proto\PbTask.cs" />
+    <Compile Include="Net\Proto\PbWar.cs" />
+    <Compile Include="Net\Receive\PbActivity\Activity_Change.cs" />
+    <Compile Include="Net\Receive\PbActivity\Activity_Get.cs" />
+    <Compile Include="Net\Receive\PbActivity\Activity_Info.cs" />
+    <Compile Include="Net\Receive\PbActivity\Activiyt_AllOpen.cs" />
+    <Compile Include="Net\Receive\PbActivity\Activiyt_packFresh.cs" />
+    <Compile Include="Net\Receive\PbActivity\Activiyt_packOpen.cs" />
+    <Compile Include="Net\Receive\PbActivity\Activiyt_Updata.cs" />
+    <Compile Include="Net\Receive\PbBag\Bag_list.cs" />
+    <Compile Include="Net\Receive\PbBag\Bag_newItems.cs" />
+    <Compile Include="Net\Receive\PbBag\Bag_sellEquip.cs" />
+    <Compile Include="Net\Receive\PbBag\Bag_updateItemCount.cs" />
+    <Compile Include="Net\Receive\PbBag\Bag_useItem.cs" />
+    <Compile Include="Net\Receive\PbBonus\Ads_award.cs" />
+    <Compile Include="Net\Receive\PbBonus\Bonus_info.cs" />
+    <Compile Include="Net\Receive\PbBonus\Box_GetEquip.cs" />
+    <Compile Include="Net\Receive\PbBonus\Box_GetEquipfive.cs" />
+    <Compile Include="Net\Receive\PbBonus\Box_GetHero.cs" />
+    <Compile Include="Net\Receive\PbBonus\Box_GetHerofive.cs" />
+    <Compile Include="Net\Receive\PbBonus\Cdkey_get.cs" />
+    <Compile Include="Net\Receive\PbBonus\Circle_Get.cs" />
+    <Compile Include="Net\Receive\PbBonus\Circle_GetBox.cs" />
+    <Compile Include="Net\Receive\PbBonus\FloatBox_award.cs" />
+    <Compile Include="Net\Receive\PbBonus\Hang_Get.cs" />
+    <Compile Include="Net\Receive\PbBonus\Hang_Open.cs" />
+    <Compile Include="Net\Receive\PbBonus\LevelAward_get.cs" />
+    <Compile Include="Net\Receive\PbBonus\OnlineAward_get.cs" />
+    <Compile Include="Net\Receive\PbBonus\OpenFund_get.cs" />
+    <Compile Include="Net\Receive\PbBonus\SignIn_award.cs" />
+    <Compile Include="Net\Receive\PbBonus\TaskNewbie_box.cs" />
+    <Compile Include="Net\Receive\PbBonus\TaskNewbie_change.cs" />
+    <Compile Include="Net\Receive\PbBonus\TaskNewbie_get.cs" />
+    <Compile Include="Net\Receive\PbBonus\TaskNewbie_list.cs" />
+    <Compile Include="Net\Receive\PbBonus\Threeads_award.cs" />
+    <Compile Include="Net\Receive\PbBonus\Treasure_spin.cs" />
+    <Compile Include="Net\Receive\PbBonus\Treasure_state.cs" />
+    <Compile Include="Net\Receive\PbEquipUp\Equip_break.cs" />
+    <Compile Include="Net\Receive\PbEquipUp\Equip_Change.cs" />
+    <Compile Include="Net\Receive\PbEquipUp\Equip_merge.cs" />
+    <Compile Include="Net\Receive\PbEquipUp\Equip_Resolve.cs" />
+    <Compile Include="Net\Receive\PbEquipUp\Equip_streng.cs" />
+    <Compile Include="Net\Receive\PbError\Error_code.cs" />
+    <Compile Include="Net\Receive\PbHero\Hero_break.cs" />
+    <Compile Include="Net\Receive\PbHero\Hero_Change.cs" />
+    <Compile Include="Net\Receive\PbHero\Hero_Get.cs" />
+    <Compile Include="Net\Receive\PbHero\Hero_levelUp.cs" />
+    <Compile Include="Net\Receive\PbLogin\Login_bind.cs" />
+    <Compile Include="Net\Receive\PbLogin\Login_enter.cs" />
+    <Compile Include="Net\Receive\PbLogin\Login_playerInfo.cs" />
+    <Compile Include="Net\Receive\PbLogin\Login_reLogin.cs" />
+    <Compile Include="Net\Receive\PbLogin\Login_verify.cs" />
+    <Compile Include="Net\Receive\PbMail\Mail_delete.cs" />
+    <Compile Include="Net\Receive\PbMail\Mail_detail.cs" />
+    <Compile Include="Net\Receive\PbMail\Mail_getAward.cs" />
+    <Compile Include="Net\Receive\PbMail\Mail_list.cs" />
+    <Compile Include="Net\Receive\PbMail\Mail_one.cs" />
+    <Compile Include="Net\Receive\PbMail\Mail_open.cs" />
+    <Compile Include="Net\Receive\PbPay\MonthCard_get.cs" />
+    <Compile Include="Net\Receive\PbPay\Pay_fund.cs" />
+    <Compile Include="Net\Receive\PbPay\Pay_getFirstPay.cs" />
+    <Compile Include="Net\Receive\PbPay\Pay_gift.cs" />
+    <Compile Include="Net\Receive\PbPay\Pay_heroicCard.cs" />
+    <Compile Include="Net\Receive\PbPay\Pay_monthCard.cs" />
+    <Compile Include="Net\Receive\PbPay\Pay_normal.cs" />
+    <Compile Include="Net\Receive\PbPay\Pay_order.cs" />
+    <Compile Include="Net\Receive\PbPay\Pay_succeed.cs" />
+    <Compile Include="Net\Receive\PbPay\Vip_buyGift.cs" />
+    <Compile Include="Net\Receive\PbPay\Vip_exp.cs" />
+    <Compile Include="Net\Receive\PbPay\Vip_info.cs" />
+    <Compile Include="Net\Receive\PbPlayer\Player_buyGold.cs" />
+    <Compile Include="Net\Receive\PbPlayer\Player_buyPower.cs" />
+    <Compile Include="Net\Receive\PbPlayer\Player_changeIcon.cs" />
+    <Compile Include="Net\Receive\PbPlayer\Player_changeName.cs" />
+    <Compile Include="Net\Receive\PbPlayer\Player_dowerLevelUp.cs" />
+    <Compile Include="Net\Receive\PbPlayer\Player_dowerPoint.cs" />
+    <Compile Include="Net\Receive\PbPlayer\Player_exp.cs" />
+    <Compile Include="Net\Receive\PbPlayer\Player_newPush.cs" />
+    <Compile Include="Net\Receive\PbPlayer\Player_point.cs" />
+    <Compile Include="Net\Receive\PbPlayer\Player_redDot.cs" />
+    <Compile Include="Net\Receive\PbPlayer\Player_resetData.cs" />
+    <Compile Include="Net\Receive\PbPlayer\Player_SeasonGet.cs" />
+    <Compile Include="Net\Receive\PbPlayer\Player_SeasonUpdate.cs" />
+    <Compile Include="Net\Receive\PbPlayer\Player_SeasonVIPOpen.cs" />
+    <Compile Include="Net\Receive\PbPlayer\Player_updateVirtual.cs" />
+    <Compile Include="Net\Receive\PbRank\Rank_List.cs" />
+    <Compile Include="Net\Receive\PbRank\Rank_lookPlayer.cs" />
+    <Compile Include="Net\Receive\PbStore\Store_ADTimes.cs" />
+    <Compile Include="Net\Receive\PbStore\Store_buyItem.cs" />
+    <Compile Include="Net\Receive\PbStore\Store_DailyItems.cs" />
+    <Compile Include="Net\Receive\PbStore\Store_exchange.cs" />
+    <Compile Include="Net\Receive\PbStore\Store_infos.cs" />
+    <Compile Include="Net\Receive\PbStore\Summon_buy.cs" />
+    <Compile Include="Net\Receive\PbSystem\Sys_heartbeat.cs" />
+    <Compile Include="Net\Receive\PbSystem\Sys_offline.cs" />
+    <Compile Include="Net\Receive\PbTask\TaskLine_get.cs" />
+    <Compile Include="Net\Receive\PbTask\TaskLine_list.cs" />
+    <Compile Include="Net\Receive\PbWar\TestEncrypt.cs" />
+    <Compile Include="Net\Receive\PbWar\War_ExitAcFb.cs" />
+    <Compile Include="Net\Receive\PbWar\War_ExworldBossFb.cs" />
+    <Compile Include="Net\Receive\PbWar\War_fb.cs" />
+    <Compile Include="Net\Receive\PbWar\War_fbInfo.cs" />
+    <Compile Include="Net\Receive\PbWar\War_fbknUpdate.cs" />
+    <Compile Include="Net\Receive\PbWar\War_fbRebirth.cs" />
+    <Compile Include="Net\Receive\PbWar\War_fbStageEnd.cs" />
+    <Compile Include="Net\Receive\PbWar\War_fbUpdate.cs" />
+    <Compile Include="Net\Receive\PbWar\War_GetBox.cs" />
+    <Compile Include="Net\Receive\PbWar\War_GetBoxUpdate.cs" />
+    <Compile Include="Net\Receive\PbWar\War_InfinityFbEnd.cs" />
+    <Compile Include="Net\Receive\PbWar\War_InfinityFbExit.cs" />
+    <Compile Include="Net\Receive\PbWar\War_InfinityFbGet.cs" />
+    <Compile Include="Net\Receive\PbWar\War_InfinityFbInfo.cs" />
+    <Compile Include="Net\Receive\PbWar\War_InfinityFbStart.cs" />
+    <Compile Include="Net\Receive\PbWar\War_TowerFbEnd.cs" />
+    <Compile Include="Net\Receive\PbWar\War_TraderBuy.cs" />
+    <Compile Include="Net\Receive\PbWar\War_worldBossFb.cs" />
+    <Compile Include="Net\Receive\PbWar\War_worldBossFbGet.cs" />
+    <Compile Include="Net\Receive\PbWar\War_worldBossFbInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
