--- a/Server/MyServer/GameServer/App.config
+++ b/Server/MyServer/GameServer/App.config
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <configSections>
+    <section name="platforms" type="CommonLib.Configuration.PlatformSection, CommonLib" />
+    <section name="clients" type="CommonLib.Configuration.ClientSection, CommonLib" />
+    <section name="servers" type="CommonLib.Configuration.ServerSection, CommonLib" />
+  </configSections>
+  
   <appSettings>
     <!-- 服务器名-->
     <add key="ServerName" value="Archer游戏服" />
@@ -9,6 +15,7 @@
 
     <!--调试模式 0调试打印消息日志 1运行模式不打印-->
     <add key="DebugModel" value="0" />
+    
   </appSettings>
 
   <servers>
