--- a/Server/MyServer/GameServer/GameServer.csproj
+++ b/Server/MyServer/GameServer/GameServer.csproj
@@ -5,6 +5,10 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <OutputPath>..\..\Product\GameServer\</OutputPath>
+  </PropertyGroup>
+
   <ItemGroup>
     <Compile Remove="XGame\**" />
     <EmbeddedResource Remove="XGame\**" />
