--- a/Server/MyServer/LoginServer/App.config
+++ b/Server/MyServer/LoginServer/App.config
@@ -7,7 +7,7 @@
   </configSections>
   <appSettings>
     <!-- 服务器名-->
-    <add key="ServerName" value="Archer登录服" />
+    <add key="ServerName" value="MyPro登录服" />
     <!--对外web端口-->
     <add key="WebPort" value="7000" />
     <!--GameKey所有服务保持一至-->
