--- a/Server/MyServer/GameServer/App.config
+++ b/Server/MyServer/GameServer/App.config
@@ -8,7 +8,7 @@
   
   <appSettings>
     <!-- 服务器名-->
-    <add key="ServerName" value="Archer游戏服" />
+    <add key="ServerName" value="MyPro游戏服" />
 
     <!-- GameKey 所有Server保持一至-->
     <add key="GameKey" value="!@@#$$~123AbcdEfTTsaef" />
