--- a/Server/MyServer/CenterServer/App.config
+++ b/Server/MyServer/CenterServer/App.config
@@ -7,7 +7,7 @@
   </configSections>
   <appSettings>
     <!-- 服务器名-->
-    <add key="ServerName" value="Archer中央服" />
+    <add key="ServerName" value="MyPro中央服" />
     <!--调试模式 0调试打印消息日志 1运行模式不打印-->
     <add key="DebugModel" value="0" />
     <!--单服在最高在线人数 注意:GameServer连接数要大于此值，最好多预留一些-->
