--- a/Server/MyServer/GameServer/App.config
+++ b/Server/MyServer/GameServer/App.config
@@ -20,7 +20,7 @@
 
   <servers>
     <!--GameServer做为服务 GameClicent进行连接   端口占用自动垒加 netIP 外网IP(用于客户端连接改成了自动获取本机IP) Auto使用自动获取本机IP -->
-    <server name="ClientToGameServer" ip="Any" port="13100" netIP="Auto" autoPort="true" maxConnection="5000" />
+    <server name="ClientToGameServer" ip="Any" port="15100" netIP="127.0.0.1" autoPort="true" maxConnection="5000" />
   </servers>
   <clients>
     <!--GameServer做为客户端连接到CenterServer配置-->
