--- a/HotFix/HotFix.csproj
+++ b/HotFix/HotFix.csproj
@@ -136,6 +136,21 @@
     <Compile Include="Module\Config\Configs\TaskDayConfig.cs" />
     <Compile Include="Module\Config\Configs\WarDropItemConfig.cs" />
     <Compile Include="Module\Data\BaseDataMgr.cs" />
+    <Compile Include="Module\Data\Item\BaseItemData.cs" />
+    <Compile Include="Module\Data\Item\DefineEmum\EItemAttribType.cs" />
+    <Compile Include="Module\Data\Item\DefineEmum\EItemType.cs" />
+    <Compile Include="Module\Data\Item\DefineEmum\ItemSetting.cs" />
+    <Compile Include="Module\Data\Item\ItemData\ItemEquip.cs" />
+    <Compile Include="Module\Data\Item\ItemData\ItemProp.cs" />
+    <Compile Include="Module\Data\Item\ItemMgr.cs" />
+    <Compile Include="Module\Data\Item\ItemUtils.cs" />
+    <Compile Include="Module\Data\LocalData\BaseTable.cs" />
+    <Compile Include="Module\Data\LocalData\LocalDataMgr.cs" />
+    <Compile Include="Module\Data\LocalData\TableData\TItems.cs" />
+    <Compile Include="Module\Data\LocalData\TableData\TPlayer.cs" />
+    <Compile Include="Module\Data\Player\PlayerData\PlayerData.cs" />
+    <Compile Include="Module\Data\Player\PlayerMgr.cs" />
+    <Compile Include="Module\Data\Player\PlayerData\PlayerWarData.cs" />
     <Compile Include="Module\Lang\Lang.cs" />
     <Compile Include="Module\Lang\LangMgr.cs" />
     <Compile Include="Module\Login\LoginArgsData.cs" />
@@ -148,6 +163,7 @@
     <Compile Include="Module\Pool\Pool.cs" />
     <Compile Include="Module\Sound\SoundMgr.cs" />
     <Compile Include="Module\Sound\SoundName.cs" />
+    <Compile Include="Module\Time\TimeHelper.cs" />
     <Compile Include="Module\Time\TimeMgr.cs" />
     <Compile Include="Module\Time\Timer.cs" />
     <Compile Include="Module\Time\TimerMgr.cs" />
